This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Undefined behavior in dictreviter_iternext
Type: behavior Stage: resolved
Components: Interpreter Core Versions: Python 3.9, Python 3.8
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: methane, miss-islington, serhiy.storchaka
Priority: normal Keywords: patch

Created on 2019-10-22 09:31 by serhiy.storchaka, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 16883 merged serhiy.storchaka, 2019-10-22 09:35
PR 16900 merged miss-islington, 2019-10-23 11:48
Messages (4)
msg355122 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2019-10-22 09:31
&DK_ENTRIES(k)[i] can be evaluated when i is -1. Getting the address before the beginning of the array is an undefined behavior in C.
msg355123 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2019-10-22 09:34
The pointer can also go before the beginning of the array in a loop if i becomes 0.
msg355212 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2019-10-23 11:48
New changeset 2e3d873d3bd0ef4708c4fa06b6cd6972574cb9af by Serhiy Storchaka in branch 'master':
bpo-38555: Fix an undefined behavior. (GH-16883)
https://github.com/python/cpython/commit/2e3d873d3bd0ef4708c4fa06b6cd6972574cb9af
msg355213 - (view) Author: miss-islington (miss-islington) Date: 2019-10-23 12:07
New changeset c5d3ea89ee5244714f221dcfcd3be96de2f1da8d by Miss Skeleton (bot) in branch '3.8':
bpo-38555: Fix an undefined behavior. (GH-16883)
https://github.com/python/cpython/commit/c5d3ea89ee5244714f221dcfcd3be96de2f1da8d
History
Date User Action Args
2022-04-11 14:59:22adminsetgithub: 82736
2019-10-23 12:18:44serhiy.storchakasetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2019-10-23 12:07:26miss-islingtonsetnosy: + miss-islington
messages: + msg355213
2019-10-23 11:48:24miss-islingtonsetpull_requests: + pull_request16436
2019-10-23 11:48:12serhiy.storchakasetmessages: + msg355212
2019-10-22 09:35:09serhiy.storchakasetkeywords: + patch
stage: patch review
pull_requests: + pull_request16427
2019-10-22 09:34:15serhiy.storchakasetmessages: + msg355123
2019-10-22 09:31:18serhiy.storchakacreate