bpo-38555: Fix an undefined behavior. (GH-16883)